; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2860.c_rt2860_maxrssi_chain.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2860.c_rt2860_maxrssi_chain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2860_softc = type { i32 }
%struct.rt2860_rxwi = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.rt2860_softc*, %struct.rt2860_rxwi*)* @rt2860_maxrssi_chain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rt2860_maxrssi_chain(%struct.rt2860_softc* %0, %struct.rt2860_rxwi* %1) #0 {
  %3 = alloca %struct.rt2860_softc*, align 8
  %4 = alloca %struct.rt2860_rxwi*, align 8
  %5 = alloca i64, align 8
  store %struct.rt2860_softc* %0, %struct.rt2860_softc** %3, align 8
  store %struct.rt2860_rxwi* %1, %struct.rt2860_rxwi** %4, align 8
  store i64 0, i64* %5, align 8
  %6 = load %struct.rt2860_softc*, %struct.rt2860_softc** %3, align 8
  %7 = getelementptr inbounds %struct.rt2860_softc, %struct.rt2860_softc* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp sgt i32 %8, 1
  br i1 %9, label %10, label %45

10:                                               ; preds = %2
  %11 = load %struct.rt2860_rxwi*, %struct.rt2860_rxwi** %4, align 8
  %12 = getelementptr inbounds %struct.rt2860_rxwi, %struct.rt2860_rxwi* %11, i32 0, i32 0
  %13 = load i64*, i64** %12, align 8
  %14 = getelementptr inbounds i64, i64* %13, i64 1
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.rt2860_rxwi*, %struct.rt2860_rxwi** %4, align 8
  %17 = getelementptr inbounds %struct.rt2860_rxwi, %struct.rt2860_rxwi* %16, i32 0, i32 0
  %18 = load i64*, i64** %17, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds i64, i64* %18, i64 %19
  %21 = load i64, i64* %20, align 8
  %22 = icmp sgt i64 %15, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %10
  store i64 1, i64* %5, align 8
  br label %24

24:                                               ; preds = %23, %10
  %25 = load %struct.rt2860_softc*, %struct.rt2860_softc** %3, align 8
  %26 = getelementptr inbounds %struct.rt2860_softc, %struct.rt2860_softc* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = icmp sgt i32 %27, 2
  br i1 %28, label %29, label %44

29:                                               ; preds = %24
  %30 = load %struct.rt2860_rxwi*, %struct.rt2860_rxwi** %4, align 8
  %31 = getelementptr inbounds %struct.rt2860_rxwi, %struct.rt2860_rxwi* %30, i32 0, i32 0
  %32 = load i64*, i64** %31, align 8
  %33 = getelementptr inbounds i64, i64* %32, i64 2
  %34 = load i64, i64* %33, align 8
  %35 = load %struct.rt2860_rxwi*, %struct.rt2860_rxwi** %4, align 8
  %36 = getelementptr inbounds %struct.rt2860_rxwi, %struct.rt2860_rxwi* %35, i32 0, i32 0
  %37 = load i64*, i64** %36, align 8
  %38 = load i64, i64* %5, align 8
  %39 = getelementptr inbounds i64, i64* %37, i64 %38
  %40 = load i64, i64* %39, align 8
  %41 = icmp sgt i64 %34, %40
  br i1 %41, label %42, label %43

42:                                               ; preds = %29
  store i64 2, i64* %5, align 8
  br label %43

43:                                               ; preds = %42, %29
  br label %44

44:                                               ; preds = %43, %24
  br label %45

45:                                               ; preds = %44, %2
  %46 = load i64, i64* %5, align 8
  ret i64 %46
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
